[improvement] prevented navbar from covering content

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3,6 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Glegoo);
 body {
   font-family: 'Roboto', sans-serif;
+  padding-top: 50px;
 }
 h1,
 h2,
